# WingAsm

./: .gitmodules  CMakeLists.txt  README.md  WingHexAsm_en_US.ts  WingHexAsm_zh_CN.ts  WingHexAsm_zh_TW.ts  resources.qrc
resources/: README.txt  arm.txt  mips.txt  powerpc.txt  x86_64.txt  x86_64_att.txt
resources/att/: arm.txt  mips.txt  powerpc.txt  x86_64.txt
resources/intel/: arm.txt  mips.txt  powerpc.txt  x86_64.txt
src/: WingHexAsm.json  asmhighlighter.cpp  asmhighlighter.h  asmwindow.cpp  asmwindow.h  asmwindow.ui  syntaxconfigparser.cpp  syntaxconfigparser.h  wingengine.cpp  wingengine.h  winghexasm.cpp  winghexasm.h
